<resources>
    <string name="app_name">Education Trip</string>
    <string name="todo">TODO</string>
    <string name="jaringan">JARINGAN</string>
    <string name="multimedia">MULTIMEDIA</string>
    <string name="rpl">R P L</string>
    <string name="dialog_exit">Keluar dari permainan?</string>
    <string name="ya">Ya</string>
    <string name="Tidak">Tidak</string>
    <string name="highscore">HIGHSCORE</string>

    <string name="title_activity_maps_multimedia">MapsMultimedia</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="versi">versi 1.1</string>
    <string name="daftar">Daftar</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun? </string>
    <string name="login_disini">Masuk disini</string>
    <string name="belum_memiliki_akun">Belum memiliki akun? </string>
    <string name="daftar_disini">Daftar disini</string>
    <string name="keluar">Keluar</string>
</resources>
