<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuSignUp"
    android:background="@color/dark"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/btn_back"
        style="@style/btn_back"
        tools:ignore="ContentDescription,MissingConstraints" />

    <LinearLayout
        android:id="@+id/form_login"
        android:layout_width="500dp"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/bg_question_jaringan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/nama"
            android:textSize="18sp"
            android:fontFamily="@font/grobold"
            android:textColor="@color/white"
            android:textColorHint="@color/semiWhite"
            android:inputType="textPersonName"
            android:layout_marginTop="100dp"
            android:paddingHorizontal="10dp"/>
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="18sp"
            android:fontFamily="@font/grobold"
            android:textColor="@color/white"
            android:textColorHint="@color/semiWhite"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="10dp"/>
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="18sp"
            android:fontFamily="@font/grobold"
            android:textColor="@color/white"
            android:textColorHint="@color/semiWhite"
            android:paddingHorizontal="10dp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:fontFamily="@font/grobold"
            android:text="@string/daftar"
            android:textColor="@color/greenLight"
            android:textSize="15sp"
            android:background="@drawable/bg_info_true"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sudah_memiliki_akun"
                android:textColor="@color/white"
                android:fontFamily="@font/grobold"/>
            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_disini"
                android:textColor="@color/white"
                android:fontFamily="@font/grobold"
                android:layout_marginStart="7dp"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:src="@drawable/education_trip"
        app:layout_constraintTop_toTopOf="@id/form_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"/>
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>