<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/app_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_exit"
            android:fontFamily="@font/andika"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/dialog_ya"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/ya"
                android:fontFamily="@font/andika"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/bg_btn_green"
                android:layout_marginEnd="15dp"/>
            <TextView
                android:id="@+id/dialog_tidak"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/Tidak"
                android:fontFamily="@font/andika"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/bg_btn_orange"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>