<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPlay"
    android:background="@drawable/bg_menu"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/btn_back"
        style="@style/btn_back"
        tools:ignore="ContentDescription,MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:id="@+id/btn_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <LinearLayout
                android:id="@+id/btn_jaringan"
                android:layout_width="175dp"
                android:layout_height="65dp"
                android:gravity="center"
                android:background="@drawable/btn_menu"
                android:layout_marginEnd="35dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jaringan"
                    style="@style/btn_menu"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/btn_multimedia"
                android:layout_width="175dp"
                android:layout_height="65dp"
                android:gravity="center"
                android:background="@drawable/btn_menu">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/multimedia"
                    style="@style/btn_menu"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btn_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:id="@+id/btn_rpl"
                android:layout_width="175dp"
                android:layout_height="65dp"
                android:gravity="center"
                android:background="@drawable/btn_menu">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rpl"
                    style="@style/btn_menu"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>