<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuHighscore"
    android:background="@color/bgBlueDark"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/btn_back"
        style="@style/btn_back"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highscore"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:fontFamily="@font/grobold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="15dp">
            <TextView
                android:id="@+id/tvTotalStar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:textColor="@color/white"
                android:fontFamily="@font/grobold"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:text="Bintang"
                android:textColor="@color/white"
                android:fontFamily="@font/grobold"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/scorejaringan"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:fontFamily="@font/grobold"
                android:gravity="center"/>
            <TextView
                android:id="@+id/scoremultimedia"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:fontFamily="@font/grobold"
                android:gravity="center"/>
            <TextView
                android:id="@+id/scorerpl"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:fontFamily="@font/grobold"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="top|center_horizontal">
            <TextView
                android:layout_width="180dp"
                android:layout_height="40sp"
                android:text="@string/jaringan"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/grobold"
                android:gravity="center"/>
            <TextView
                android:layout_width="180dp"
                android:layout_height="40sp"
                android:text="@string/multimedia"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/grobold"
                android:gravity="center"/>
            <TextView
                android:layout_width="180dp"
                android:layout_height="40sp"
                android:text="@string/rpl"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/grobold"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>